--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: "Install deps"
+          command: "npm ci"
+      - run:
           name: "Run tests"
           command: "npm run test"
 
