--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,6 @@ workflows:
   test-app:
     jobs:
       - test-app
-      - say-hello
+      - say-hello:
+          requires:
+            - test-app
